fix: z-index footer

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -4,7 +4,7 @@
 
 footer {
   position: relative;
-  z-index: 10;
+  z-index: 40;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
